--- a/inicio.css
+++ b/inicio.css
@@ -3,6 +3,28 @@ body{
     font-family: 'Inter', sans-serif;
 }
 
+* { margin: 0; padding: 0; }
+
+.slider {
+    display: block;
+    height: 293px;
+    width: 600px;
+    margin: auto;
+    position: relative;
+}
+
+.slider li {
+    list-style: none;
+    position: absolute;
+}
+
+.slider img {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    vertical-align: top;
+}
+
 .header{
     display: flex;
     width: 100%;
