--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,7 +1,10 @@
 body{
     margin: 0;
     font-family: 'Inter', sans-serif;
+    width: 100%;
+    height: 100%;
 }
+
 
 .header{
     display: flex;
@@ -73,6 +76,12 @@ body{
     font-weight: 600;
     color: white;
 
+}
+
+.carrosel { 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
 }
 
 
