--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,4 +1,5 @@
-body{
+
+body {
     margin: 0;
     font-family: 'Inter', sans-serif;
     width: 100%;
@@ -7,6 +8,7 @@ body{
 
 
 .header{
+    font-family: 'Inter', sans-serif;
     display: flex;
     width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
