--- a/css/inicio.css
+++ b/css/inicio.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-bottom: 20px;
 }
 
 .logo-principal img{
@@ -83,11 +84,44 @@ body {
 .carrosel { 
     display: flex; 
     align-items: center; 
-    justify-content: center; 
+    justify-content: center;
 }
 
+/* Colocar esse parte de baixo em outro css fica melhor? */
 
+.nossas-qualidades {
+    display: flex;
+    max-width: 100%;
+    padding-bottom: 200px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 
+.bloco-1 {
+    width: 20%;
+    height: 224px;
+    background-color: #4C6E69;
+}
 
+.bloco-2 {
+    width: 20%;
+    height: 224px;
+    background-color: #539C8A;
+}
 
+.bloco-3 {
+    width: 20%;
+    height: 224px;
+    background-color: #4C6E69;
+}
 
+.bloco-4 {
+    width: 20%;
+    height: 224px;
+    background-color: #539C8A;
+}
+
+.bloco-5 {
+    width: 20%;
+    height: 224px;
+    background-color: #4C6E69;
+}
