--- a/css/inicio.css
+++ b/css/inicio.css
@@ -87,12 +87,9 @@ body {
     justify-content: center;
 }
 
-
-
-
 .espaço1 {
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: white;
     display: flex;
 }
@@ -119,11 +116,11 @@ body {
 
 .atendimento h1{
     color: #000;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .atendimento p{
@@ -134,16 +131,25 @@ line-height: normal;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    padding-bottom: 40px;
    
 }
 
-.box-saibamais{
+.box-saibamais div{
     width: 142px;
     height: 27px;
     flex-shrink: 0;
     border-radius: 15px;
     background: linear-gradient(90deg, #4C6E69 0%, #58CCAF 100%);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-padding-top: 60px;
 }
+
+.box-saibamais div a{
+    text-decoration: none;
+    padding: 0 5px;
+    font-weight: 600;
+    color: white;
+
+}
+
 
