--- a/css/qualidades.css
+++ b/css/qualidades.css
@@ -16,6 +16,7 @@
     font-weight: 700;
     line-height: normal;
     text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .bloco-2-4 {
@@ -29,6 +30,7 @@
     font-weight: 700;
     line-height: normal;
     text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 
