--- a/css/inicio.css
+++ b/css/inicio.css
@@ -87,7 +87,7 @@ body {
     justify-content: center;
 }
 
-.espaço1 {
+.espaco1 {
     width: 100%;
     height: 150px;
     background-color: white;
@@ -161,6 +161,42 @@ body {
     color: white;
 }
 
+.txt2 {
+    padding-left: 110px;
+    padding-top: 180px;
+}
 
+.tratamento {
+    width: 100%;
+    height: 566px;
+    background: #56857D;
+    display: flex;
+   
+}
 
+.tratamento img {
+    width: 450px;
+    height: 450px;
+    padding-left: 250px;
+    padding-top: 80px;
+}
 
+.tratamento h1{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.tratamento p{
+    padding-top: 16px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-bottom: 40px;
+}
