--- a/css/inicio.css
+++ b/css/inicio.css
@@ -277,6 +277,14 @@ body {
 }
 
 .mapa {
+    max-width: 100%;
     padding-top: 35px;
     padding-left: 70px;
+}
+
+footer {
+    width: 100%;
+    height: 340px;
+    background-color: #141414;
+    
 }
