--- a/css/serviços.css
+++ b/css/serviços.css
@@ -27,17 +27,17 @@ line-height: normal;
 
 
 .implante{
-    width: 1300px;
+    width: 1200px;
     height: 377px;
     flex-shrink: 0;
     background-color: #E5E5E5;
-    margin-left: 100px;
+    margin: 0 auto;
     display: flex;
 }
 
 .implante_logo{
     padding-top: 100px;
-    padding-left: 100px;
+    padding-left: 60px;
 }
 
 .implante_texto{
@@ -106,11 +106,11 @@ line-height: normal;
 }
 
 .clinica{
-    width: 1300px;
+    width: 1200px;
     height: 377px;
     flex-shrink: 0;
     background-color: #E5E5E5;
-    margin-left: 100px;
+    margin: 0 auto;
     display: flex;
 }
 
@@ -184,13 +184,14 @@ line-height: normal;
 }
 
 .ortodontia{
-    width: 1300px;
+    width: 1200px;
     height: 377px;
     flex-shrink: 0;
     background-color: #E5E5E5;
-    margin-left: 100px;
+    margin: 0 auto;
     display: flex;
 }
+
 
 .ortodontia_img{
     padding-top: 100px;
@@ -231,11 +232,13 @@ footer {
 }
 
 .txt_contato{
-    padding-top: 73px;
-    padding-left: 100px;
+    width: 20%;
+    margin-top: 5%;
 }
 
+
 .foot1 h1{
+    margin-bottom: 0;
     padding-left: 50px;
     color: #FFF;
     font-family: Inter;
@@ -246,6 +249,7 @@ footer {
 }
 
 .foot1 p{
+    margin-top: 0;
     padding-left: 50px;
     color: #FFF;
     font-family: Inter;
@@ -256,6 +260,7 @@ footer {
 }
 
 .foot2 h1{
+    margin-bottom: 0;
     padding-top: 28px;
     padding-left: 50px;
     color: #FFF;
@@ -267,6 +272,7 @@ footer {
 }
 
 .foot2 p{
+    margin-top: 0;
     padding-left: 50px;
     color: #FFF;
     font-family: Inter;
@@ -279,14 +285,18 @@ footer {
 }
 
 
+.centro_footer{
+    width: 60%;
+    text-align: center;
+}
+
 .main_footer{
     width: 100%;
 }
 
 .menu_footer{
     width: 100%; 
-    height: 100%;
-    padding-left: 88px;
+
 }
 
 .menu_footer ul{
@@ -317,36 +327,37 @@ display: inline-block;
 }
 
 .redes_sociais{
-    padding-left: 310px;
-    padding-top: 25px;
+    margin-top: 4%;
 }
 
 .footer_img img{
-    width: 195px;
-    height: 195px;
+    width: 25%;
+    height: 25%;
     flex-shrink: 0;
-    padding-left: 300px;
 }
 
 .txt_horario{
-    padding-left: 150px;
-    padding-top: 74px;
+    width: 20%;
+    margin-top: 5%;
 }
 
 .foot3 h1{
+    margin-bottom: 0;
     color: #FFF;
-font-family: Inter;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .foot3 p{
+    margin-top: 0;
     color: #FFF;
-font-family: Inter;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
+
