--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -1,16 +1,44 @@
+.agendamento{
+  width: 100%;
+  height: 135px;
+  background-color: #4C6E69;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  display: flex;
+  margin: 0;
+}
 
-  .wrapper {
-    width: 1031px;
+.txt_agend{
+  display: flex;
+  height: 45px;
+  padding-left: 38%;
+  padding-top: -12px;
+}
+
+.txt_agend p{
+  color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 40px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+}
+
+.wrapper {
+    width: 1000px;
     height: 550px;
     background: #141414;
     border-radius: 25px;
     box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+    display: inline-block;
+    margin: 70px;
+
   }
 
   .wrapper .topo-calendario{
     display: flex;
     align-items: center;
-    padding: 25px 30px 10px;
+    padding: 25px 35px 15px 25px;
     justify-content: space-between;
   }
 
@@ -18,13 +46,11 @@
     display: flex;
     text-align: center;
     justify-content: center;
-
   }
 
   .topo-calendario .icons{
     display: flex;
-    padding-top: 16px;
-
+    padding-top: 15px;
   }
 
   .topo-calendario .icons span{
@@ -45,7 +71,7 @@
   }
 
   .topo-calendario .icons span:hover{
-    background: #f2f2f2;
+    background: #58CCAF;
   }
 
   .topo-calendario .data-atual{
@@ -87,6 +113,14 @@
     margin-top: 30px;
   }
 
+ .dias {
+  padding: 0;
+ }
+
+ .meses {
+  padding: 0;
+ }
+
   .dias li.inactive{
     color: #434343;
   }
@@ -115,8 +149,53 @@
     background: #58CCAF;
   }
 
-  .div_calendario{
-    width: 100%px;
-height: 406px;
-display: flex ;
-  }
+
+.box-horarios {
+  width: 300px;
+  height: 550px;
+  background-color: hsl(0, 0%, 8%);
+  border-radius: 25px;
+  margin-left: 100px;
+  display: inline-block;
+  position: absolute;
+  margin: 70px;
+}
+
+.topo-horarios {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.topo-horarios p {
+  font-size: 1.45rem;
+  font-weight: 500;
+  color: #58CCAF;
+}
+
+.horas {
+  color: #fff;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.horas .treedigt {
+  padding: 10px 25px 10px 20px;
+}
+
+.horas div {
+  padding: 10px 20px 10px 20px;
+  text-align: center;
+  flex-shrink: 0;
+  display: inline-block;
+  border: 2px solid #2D2D2D;
+  border-radius: 25px;
+  margin: 15px 20px 15px 30px;
+}
+
+.horas div:hover {
+  border: 2px solid #58CCAF;
+  border-radius: 25px;
+}
+
