--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -31,7 +31,8 @@ line-height: normal;
     border-radius: 25px;
     box-shadow: 0 15px 40px rgba(0,0,0,0.12);
     display: inline-block;
-    margin: 70px;
+    margin-top: 5%;
+    margin-left: 1%;
 
   }
 
@@ -155,10 +156,10 @@ line-height: normal;
   height: 550px;
   background-color: hsl(0, 0%, 8%);
   border-radius: 25px;
-  margin-left: 100px;
+  margin-left: 1%;
   display: inline-block;
   position: absolute;
-  margin: 70px;
+  margin-top: 5%;
 }
 
 .topo-horarios {
@@ -199,3 +200,236 @@ line-height: normal;
   border-radius: 25px;
 }
 
+.formulario{
+  width: 100%;
+  height: 135px;
+  background-color: #4C6E69;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  display: flex;
+  margin: 0;
+  margin-top: 5%;
+}
+
+.txt_form{
+  display: flex;
+  height: 45px;
+  padding-left: 39%;
+  padding-top: -12px;
+  color: #FFF;
+  text-align: center;
+  font-family: Inter;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  }
+
+
+.div_form{
+  width: 100%;
+  height: 700px;
+  background-color: #D8D8D8;
+  margin-top: 5%;
+  display: flex;
+}
+
+.form{
+  width: 784px;
+  height: 700px;
+  border-radius: 25px;
+  background-color: #141414;
+ margin-left: 20%;
+ 
+}
+
+form{
+  display: flex;
+}
+
+label{
+  display: block;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-left: 50px;
+  padding-top: 45px;
+}
+
+input{
+  margin-left: 50px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: #FFF;
+  width: 306px;
+  height: 30px;
+  flex-shrink: 0;
+}
+
+
+.box-form{
+  margin-left: 5%;
+  margin-top: 10%;
+
+}
+
+.box-form div{
+  border-radius: 15px;
+  background: linear-gradient(90deg, #4C6E69 0%, #58CCAF 100%);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #FFF;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 100;
+  line-height: normal;
+  padding: 5px;
+
+}
+
+.box-form div a{
+  text-decoration: none;
+  padding: 0 5px;
+  font-weight: 600;
+  color: white;
+
+}
+
+footer {
+  width: 100%;
+  height: 340px;
+  background-color: #141414;
+  display: flex;
+  margin-top: 5%;
+}
+
+.txt_contato{
+  width: 20%;
+  margin-top: 5%;
+}
+
+
+.foot1 h1{
+  margin-bottom: 0;
+  padding-left: 50px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.foot1 p{
+  margin-top: 0;
+  padding-left: 50px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.foot2 h1{
+  margin-bottom: 0;
+  padding-top: 28px;
+  padding-left: 50px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.foot2 p{
+  margin-top: 0;
+  padding-left: 50px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: -10px;
+
+}
+
+
+.centro_footer{
+  width: 60%;
+  text-align: center;
+}
+
+.main_footer{
+  width: 100%;
+}
+
+.menu_footer{
+  width: 100%; 
+
+}
+
+.menu_footer ul{
+  margin: 0;
+  list-style: none;
+  font-size: 18px;
+  text-align: center;
+}
+
+.menu_footer ul li{
+  display: inline;
+}
+
+.menu_footer ul li a:hover{
+  font-weight: bolder;
+}
+
+.main_footer ul li a{
+  color: #FFF;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+padding: 20px;
+text-decoration: none;
+display: inline-block;
+}
+
+.redes_sociais{
+  margin-top: 4%;
+}
+
+.footer_img img{
+  width: 25%;
+  height: 25%;
+  flex-shrink: 0;
+}
+
+.txt_horario{
+  width: 20%;
+  margin-top: 5%;
+}
+
+.foot3 h1{
+  margin-bottom: 0;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.foot3 p{
+  margin-top: 0;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
